adjusted login view and mainview stopped scrolling when logging in on mobile

--- a/src/components/login-view/login-view.scss
+++ b/src/components/login-view/login-view.scss
@@ -40,6 +40,7 @@
     background: #1c1c1c;
     overflow: hidden;
 	text-align: center;
+    bottom: 20px;
 	
 }
 
